--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <base target="_top">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%23f97316'/%3E%3Ctext x='50' y='72' font-size='70' font-weight='800' font-family='system-ui' text-anchor='middle' fill='white'%3ET%3C/text%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg%20xmlns%3D'http://www.w3.org/2000/svg'%20viewBox%3D'0%200%20256%20256'%3E%3Crect%20width%3D'256'%20height%3D'256'%20rx%3D'56'%20fill%3D'%232563eb'/%3E%3Cpolyline%20points%3D'220%2020%2036%2020%20128%20153.44%20196%2056%2092%2056%20220%20240%2036%20240%2096%20152%20128%20204'%20fill%3D'none'%20stroke%3D'%23ffffff'%20stroke-width%3D'22'%20stroke-linecap%3D'round'%20stroke-linejoin%3D'round'/%3E%3C/svg%3E">
     <?!= include('views/partials/head'); ?>
   </head>
   <body class="ts-body ts-theme-dark">
