Add first attempt at "potential income

--- a/views/partials/dashboard.html
+++ b/views/partials/dashboard.html
@@ -167,6 +167,32 @@
         <span class="ts-income-row-actual" id="income-actual-net-value"></span>
         <span class="ts-income-row-est" id="income-net">--</span>
       </div>
+      <div class="ts-income-divider income-potential-row" id="potential-net-divider" hidden></div>
+      <div class="ts-income-row income-potential-row" id="income-potential-net-row" hidden>
+        <span class="ts-income-row-label">Net income if working standard hours every day</span>
+        <span class="ts-income-row-actual"></span>
+        <span class="ts-income-row-est" id="income-potential-net">--</span>
+      </div>
+      <div class="ts-income-row income-potential-row" id="income-estimated-standard-row" hidden>
+        <span class="ts-income-row-label">Estimated net income (standard hours)</span>
+        <span class="ts-income-row-actual"></span>
+        <span class="ts-income-row-est" id="income-estimated-standard-net">--</span>
+      </div>
+      <div class="ts-income-row income-potential-row" id="income-estimated-projected-row" hidden>
+        <span class="ts-income-row-label">Estimated net income (projected hours)</span>
+        <span class="ts-income-row-actual"></span>
+        <span class="ts-income-row-est" id="income-estimated-projected-net">--</span>
+      </div>
+      <div class="ts-income-row income-potential-row" id="income-hours-balance-standard-row" hidden>
+        <span class="ts-income-row-label">Projected hours balance (standard hours)</span>
+        <span class="ts-income-row-actual"></span>
+        <span class="ts-income-row-est" id="income-hours-balance-standard">--</span>
+      </div>
+      <div class="ts-income-row income-potential-row" id="income-hours-balance-projected-row" hidden>
+        <span class="ts-income-row-label">Projected hours balance (projected hours)</span>
+        <span class="ts-income-row-actual"></span>
+        <span class="ts-income-row-est" id="income-hours-balance-projected">--</span>
+      </div>
       <div id="hourly-rate-divider" class="ts-income-divider" hidden></div>
       <div class="ts-income-row" id="hourly-rate-gross-row" hidden>
         <span class="ts-income-row-label">Gross income hourly rate based on <span id="hourly-rate-gross-label">--</span>:</span>
